--- a/_config.yml
+++ b/_config.yml
@@ -51,4 +51,4 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
-remote_theme:Windows 95 Theme for Jekyll
+remote_theme: windows-95
