--- a/_data/tags.yml
+++ b/_data/tags.yml
@@ -1,11 +1,17 @@
 tag1:
-  name: tag1
+  name: Knightblade
 
 tag2:
-  name: tag2
+  name: Neopunk
 
 tag3:
-  name: tag3
+  name: Beast Slayer
 
 tag4:
-  name: tag4
+  name: Suramon
+
+tag5:
+  name: Cult of the Dragon
+
+tag6:
+  name: Debt City
