Initial GitHub pages site with Jekyll

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ url: #Your url here
 baseurl: /project
 
 # variables
-name: Solohack3r Studios
-description: Indie Game Developer
+name: Solohack3r Studios - Indie Game Developer
+description: An indie game developer focusing on retro open world RPGs.
 google_verification: null
 
 
