Initial GitHub pages site with Jekyll

--- a/_data/tags.yml
+++ b/_data/tags.yml
@@ -11,7 +11,7 @@ tag4:
   name: Suramon
 
 tag5:
-  name: Cult of the Dragon
+  name: Cult_of_the_Dragon
 
 tag6:
-  name: Debt City
+  name: Debt_City
